--- a/memoteca/src/app/components/rodape/rodape.component.html
+++ b/memoteca/src/app/components/rodape/rodape.component.html
@@ -2,5 +2,5 @@
   <small class="TextoCopyright ff-inter">&copy;
       2022 Grupo Alura. Todos os direitos reservados.
   </small>
-  <img class="LogoRodape" src="./../../../assets/logo-alura.png" alt="Logo da Alura">
+  <img class="LogoRodape" src="/assets/Imagens/logo-alura.png" alt="Logo da Alura">
 </footer>
