--- a/memoteca/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
+++ b/memoteca/src/app/components/pensamentos/criar-pensamento/criar-pensamento.component.html
@@ -71,8 +71,8 @@
       </div>
     </div>
     <div class="acoes">
-      <button class="botao">Salvar</button
-      ><button class="botao">Cancelar</button>
+      <button (click)="criarPensamento()" class="botao">Salvar</button>
+      <button class="botao">Cancelar</button>
     </div>
   </form>
 </section>
